# flowly

./: .gitignore  BOARD.md  CONTRIBUTING.md  DESKTOP_VS_OSS.md  FLOWLETS_CATALOG.md  FLOWLETS_ROADMAP.md  MCP.md  NOTICE  PLUGINS.md  PYPI_README.md  README.md  SECURITY.md  SELF_HOSTING.md  article-install-flowly.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  install-unix.yml  install-windows.yml  test-install-windows.yml
assets/: README.md
bridge/src/: whatsapp.ts
docs/: cli-distribution.md  feature-rpc-architecture.md  internal-gateway-rpc-architecture.md  memory-governance-architecture.md  petdex-floating-pet.md  skill-self-improvement-architecture.md
docs/security/: README.md  cli-sandbox.md  network-egress.md  plugin-trust-model.md  sandbox-architecture.md  settings-ui.md  subprocess-env-scrub.md  testing.md
flowly/: __init__.py  __main__.py  profile.py  protected_paths.py  runtime_cwd.py
flowly/account/: account_key.py  audit_log.py  auth.py  billing.py  fingerprint.py  firebase_rest.py  health.py  relay_config.py  server.py  token_store.py
flowly/agent/: assistants.py  context.py  error_classifier.py  hooks.py  inflight.py  learn_prompt.py  loop.py  memory.py  prompt_blocks.py  reply_media.py  skill_bundles.py  skill_lifecycle.py  skill_usage.py  skills.py  slash_commands.py  subagent.py  subagent_announce_queue.py  subagent_registry.py  tool_result_spill.py  trajectory.py  voice_postproc.py
flowly/artifacts/: __init__.py  context.py  store.py  summary.py
flowly/audit/: __init__.py  logger.py  reader.py  retention.py
flowly/auth/: __init__.py  openai_codex.py  xai_oauth.py  zai_coding.py
flowly/board/: __init__.py  actions.py  orchestrator.py  store.py
flowly/bus/: events.py
flowly/channels/: _imessage_bluebubbles.py  _imessage_send.py  _typedstream.py  discord.py  email.py  feature_rpc.py  gmail_auth.py  imessage.py  manager.py  slack.py  slack_format.py  teams.py  telegram.py  web.py
flowly/clarify/: __init__.py  manager.py  types.py
flowly/cli/: agent_cmd.py  approvals_cmd.py  bundles_cmd.py  channels_cmd.py  codex_cmd.py  commands.py  cron_cmd.py  doctor.py  enroll_cmd.py  entry.py  gateway_cmd.py  glm_cmd.py  inline_cards.py  login_cmd.py  logout_cmd.py  mcp_cmd.py  memory_cmd.py  onboard_cmd.py  pairing_cmd.py  persona_cmd.py  plugins_cmd.py  service_cmd.py  setup.py  setup_cmd.py  setup_summary.py  skill_gov_cmd.py  skills_cmd.py  update_cmd.py  xai_cmd.py
flowly/coaching/: __init__.py  gate.py  manager.py
flowly/codex/: __init__.py  app_server.py  approval_bridge.py  projector.py  session.py  tool_migration.py  tools_mcp_server.py
flowly/compaction/: estimator.py  service.py  summarizer.py  (+1 more)
scripts/: install.ps1  install.sh  memchat-setup.sh  memlab.sh
tests/: test_account_home_isolation.py  test_action_turn_all_tools_disabled.py  test_anthropic_empty_text.py  test_anthropic_provider.py  test_approval_push.py  test_approval_supports_always.py  test_arg_coercion.py  test_artifact_sessions.py  test_assistants.py  test_audit_llm_call.py  test_audit_reader.py  test_audit_retention.py  test_bash_finder.py  test_board_gateway.py  test_board_orchestrator.py  test_board_push.py  test_board_store.py  test_board_tools.py  test_board_tui.py  test_browser_provider_gateway.py  test_clarify_gateway.py  test_clarify_manager.py  test_clarify_tool.py  test_clarify_web_channel.py  test_cli_smart_entry.py  test_coaching.py  test_coaching_gate_real.py  test_code_skew.py  test_codex_app_server.py  test_codex_approval_bridge.py  test_codex_auth.py  test_codex_bin_resolution.py  test_codex_model_catalog.py  test_codex_parity.py  test_codex_projector.py  test_codex_provider.py  test_codex_session.py  test_codex_session_persistence.py  test_codex_session_tool.py  test_codex_slash_command.py  (+171 more)
workspace/: SOUL.md  USER.md
(+668 files in other folders)
