[project]
name = "flowly-ai"
version = "3.1.0"
description = "Open-source AI agent that runs on your machine — one memory, every channel, your own LLM keys"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "PYPI_README.md"
authors = [
    {name = "flowly contributors"}
]
keywords = ["ai", "agent", "chatbot", "assistant", "telegram", "discord", "slack", "voice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "segno>=1.6.0",
    "croniter>=2.0.0",
    "python-telegram-bot>=21.0",
    "tiktoken>=0.5.0",
    "filelock>=3.0.0",
    "aiohttp>=3.9.0",
    "starlette>=0.32.0",
    "uvicorn>=0.24.0",
    "audioop-lts>=0.2.0; python_version>='3.13'",
    "python-multipart>=0.0.6",
    "InquirerPy>=0.3.4",
    "pyngrok>=7.0.0",
    "slack-sdk>=3.26.0",
    "python-jose[cryptography]>=3.3.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    "PyYAML>=6.0",
    "mcp>=1.20.0,<2.0.0",
    "textual>=0.80.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
# Optional web search/extract backends. Providers lazy-import these and
# surface a clear hint when missing, so the base install stays lean.
# Install with: pip install "flowly-ai[search]".
search = [
    "ddgs>=9.0.0",
    "exa-py>=1.0.0",
    "firecrawl-py>=1.0.0",
    "parallel-web>=0.1.0",
]

[project.scripts]
flowly = "flowly.cli.entry:main"
flowly-hub = "flowly.hub.cli:main"

[project.urls]
Homepage = "https://github.com/Nocetic/flowly"
Repository = "https://github.com/Nocetic/flowly"
Issues = "https://github.com/Nocetic/flowly/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowly"]

[tool.hatch.build.targets.wheel.sources]
"flowly" = "flowly"

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "flowly/**/*.py",
    "flowly/skills/**/*.html",
    "flowly/skills/**/*.js",
    "flowly/skills/**/*.json",
    "flowly/skills/**/*.md",
    "flowly/skills/**/*.sh",
    "flowly/skills/**/*.txt",
    "flowly/mcp_catalog/**/*.yaml",
]

[tool.hatch.build.targets.sdist]
include = [
    "flowly/",
    "bridge/",
    "workspace/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "flowly/bridge"
# Bundle the workspace templates (AGENTS/SOUL/USER/TOOLS/HEARTBEAT + personas +
# memory) the first-run seed copies. They live at the repo root; ship them into
# the package so pip/uv installs (not just source checkouts) get them.
"workspace" = "flowly/workspace"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Skip real-LLM tests by default — they hit the live OpenRouter
# endpoint, cost real tokens, and the model's judgement isn't
# stable enough for an assertion suite. Run them explicitly with
# ``pytest -m real_llm`` when you actually want to evaluate the
# coaching gate envelopes against a live model.
addopts = "-m 'not real_llm'"
markers = [
    "real_llm: hits the live LLM API (requires OPENROUTER_API_KEY); skipped by default",
]
